[gd_scene load_steps=5 format=3 uid="uid://diyva6yg2gv20"]

[ext_resource type="Script" uid="uid://8gjjoehytcbf" path="res://Scripts/UI/OptionsScript.gd" id="1_5hy3q"]
[ext_resource type="FontFile" uid="uid://bx6btgurlmtq0" path="res://Sprites/upheavtt.ttf" id="2_cbhj7"]
[ext_resource type="Theme" uid="uid://76y5sb10ipj3" path="res://MainTheme.tres" id="3_q4at1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5hy3q"]
bg_color = Color(0.14, 0.14, 0.14, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="OptionsLayer" type="CanvasLayer"]
layer = 3

[node name="Options" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 50
script = ExtResource("1_5hy3q")

[node name="Panel2" type="Panel" parent="Options"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5hy3q")

[node name="MarginContainer" type="MarginContainer" parent="Options/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Options/Panel2/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cbhj7")
theme_override_font_sizes/font_size = 40
text = "Options
"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cbhj7")
theme_override_font_sizes/font_size = 40
text = "Resolution:"

[node name="OptionButton" type="OptionButton" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label6" type="Label" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cbhj7")
theme_override_font_sizes/font_size = 40
text = "Window mode:"

[node name="OptionButton2" type="OptionButton" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label7" type="Label" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cbhj7")
theme_override_font_sizes/font_size = 40
text = "
Master sound:"

[node name="SoundSlider" type="HSlider" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="Label2" type="Label" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cbhj7")
theme_override_font_sizes/font_size = 40
text = "Music:"

[node name="MusicSlider" type="HSlider" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="Label3" type="Label" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cbhj7")
theme_override_font_sizes/font_size = 40
text = "SFX:"

[node name="SFXSlider" type="HSlider" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="Label5" type="Label" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cbhj7")
theme_override_font_sizes/font_size = 40

[node name="Button" type="Button" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_q4at1")
text = "Return"

[node name="QuitButton" type="Button" parent="Options/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_q4at1")
text = "Quit"
